# dmp

./: .flake8  .gitignore  LICENSE  Makefile  README.md  db.py  dmp.py  models.py  pyproject.toml  requirements_dev.txt  setup.cfg  test_dmp.py
dmp/: db.py  models.py
docs/: conf.py  index.rst
docs/usage/: installation.rst  introduction.rst
src/dmp/: __init__.py  bootstrap.py  respository.py  service.py
src/dmp/adaptors/: orm.py  repository.py
src/dmp/domain/: models.py
src/dmp/endpoints/: flask_app.py
tests/: conftest.py  test_db.py  test_dmp.py  test_services.py
