[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-length-length=88

[tool.poetry.dependencies]
python = "^3.10"
Flask = "~2.2.3"
sqlalchemy = "~2.0.8"

#[tool.poetry.packages]
#packages = [
#    { include = "dmp" }
#]

[tool.poetry]
name = "dmp"
version = "0.1.0"
description = "Core functionality for regulatory information management system."
license = "GPL-3.0-only"
authors = ["Matthew Lemon <y@yulqen.org>"]
readme = "README.md"
repository = "https://github.com/yulqen/dmp"

[tool.poetry.group.docs.dependencies]
sphinx = "~6.1.3"
myst-parser = "~1.0.0"

[tool.poetry.group.dev.dependencies]
black = "~23.3.0"
flake8 = "~6.0.0"
pdbpp = "~0.10.3"
mypy = "~1.1.1"
mypy-extensions = "~1.0.0"
litecli = "~1.9.0"
isort = "~5.12.0"
ipython = "~8.12.0"

[tool.poetry.group.test.dependencies]
pytest = "~7.2.2"


