[metadata]
name = dmp-yulqen
version = 0.0.1
author = Matthew Lemon
description = A prototype business management application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yulqen/dmp

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    SQLAlchemy==1.4.36

[options.packages.find]
where = src
