[metadata]
name = dmp-yulqen
version = 0.0.1
author = Matthew Lemon
description = A prototype business management application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yulqen/dmp

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    SQLAlchemy==1.4.36
    Flask==2.1.2

[options.packages.find]
where = src

[flake8]
ignore = E203,E501,E303,E261,E26,E731,E702,F403,F405,W503,W504,E203,D100,D101,D102,D103,D104,D105,D107,D300,D400,C0111
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 88

# [tool:pytest]
# log_cli = true
